--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -9,12 +9,12 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
-      - name: Cache local Maven repository
-        uses: actions/cache@v2.1.4
+      - uses: actions/checkout@v3
+      - name: 'Set Java 11 with Maven cache'
+        uses: actions/setup-java@v3
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          distribution: 'temurin' # Check supported distributions at https://github.com/marketplace/actions/setup-java-jdk
+          java-version: '11'
+          cache: 'maven'
       - name: Autograding
         uses: education/autograding@v1
